# media-tools-web

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/tasks/: stricter-fuzzy-matching.md
services/edl-to-archive/: pyproject.toml
services/edl-to-archive/edl_to_archive/: main.py  router.py  session_store.py  settings.py
services/edl-to-archive/edl_to_archive/core/: converter.py  exclusion.py  models.py  pipeline.py
services/edl-to-archive/edl_to_archive/templates/: base.html
services/edl-to-archive/edl_to_archive/templates/edl_to_archive/: form.html
services/gateway/: pyproject.toml
services/gateway/gateway/: admin.py  main.py
services/gateway/gateway/auth/: crypto.py  db.py  middleware.py  router.py  session.py
services/gateway/gateway/static/: style.css
services/gateway/gateway/templates/: base.html  index.html
services/gateway/gateway/templates/admin/: index.html  users.html
services/gateway/gateway/templates/auth/: account.html  login.html
services/green-to-red/: pyproject.toml
services/green-to-red/green_to_red/: job_runner.py  main.py  router.py  settings.py
services/green-to-red/green_to_red/core/: downloader.py  pipeline.py  youtube_search.py
services/green-to-red/green_to_red/templates/: base.html
services/green-to-red/green_to_red/templates/green_to_red/: _status_fragment.html  form.html  job_status.html
services/yt-bulk-dl/: pyproject.toml
services/yt-bulk-dl/yt_bulk_dl/: job_runner.py  main.py  router.py  settings.py
services/yt-bulk-dl/yt_bulk_dl/core/: downloader.py
services/yt-bulk-dl/yt_bulk_dl/templates/: base.html
services/yt-bulk-dl/yt_bulk_dl/templates/yt_bulk_dl/: _status_fragment.html  form.html  job_status.html
