[project]
name = "edl-to-archive"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlsxwriter>=3.2",
    "odfpy>=1.4",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["edl_to_archive"]
