[project]
name = "green-to-red"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "spotifyscraper>=2.1.5",
    "yt-dlp>=2023.12.30",
    "musicbrainzngs>=0.7.1",
    "ffmpeg-python>=0.2.0",
    "youtube-search>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["green_to_red"]
